# TD-AgentCore

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  parser_demo.py  pyproject.toml
docker/: Dockerfile  Dockerfile.agent  Dockerfile.api  Dockerfile.orchestrator  build.sh  entrypoint.sh  init-db.sql  startup.sh  td-js-copilot-gpt.yml
docker/nginx/: nginx.conf
docs/数据库/: 建表.sql
docs/质差定界/: 质差定界派单_工具设计文档.md  质差定界派单_行为树.json
src/: __init__.py  chat.py  main.py  mcp_demo.py
src/agents/: __init__.py  example_agent.py  specialized_agents.py
src/agents/quality_defect/: __init__.py  extract_elements_chain.py  quality_defect_agent.py  (+1 more)
src/api/: __init__.py  example_api.py  quality_defect_api.py
src/btree/: __init__.py  behavior_tree.py  visualizer.py
src/chains/: __init__.py  base_chain.py
src/config/: __init__.py  config.json  db_config.txt  settings.py
src/core/: __init__.py  ces_stream_sender.py  database.py
src/knowledges/: reply_prompt.md
src/mcp/: __init__.py  mcp_client.py  mcp_server.py  orchestrator.py
src/prompts/: example_prompts.md
src/services/: agent_service.py  http_mcp_client.py  http_mcp_server.py  llm_gateway.py  orchestrator_service.py  state_store.py  task_manager.py  tracing.py
src/tools/: __init__.py  local_tools.py
src/utils/: InvokeManager.py  TokenUtil.py  __init__.py  check_item_input_builder.py  cpl_utils.py  encrypt_util.py  judgment_tool.py  knowledge_util.py  logger.py  oauth_util.py  order_util.py  order_utils.py  prompt_util.py  resolve_content_parser.py  utils.py
(+6 files in other folders)
